force-app/main/default/objects/ETPL_HomePage__mdt/ETPL_HomePage__mdt.object-meta.xml
<CustomObject>
    <label>ETPL Home Page</label>
    <pluralLabel>ETPL Home Pages</pluralLabel>
</CustomObject>