force-app/main/default/objects/ETPL_HomePage__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>&apos;Yes&apos;</defaultValue>
    <description>Determines whether or not the record is used in the ETPL portal.</description>
    <inlineHelpText>Determines whether or not the record is used in the ETPL portal.</inlineHelpText>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>