force-app/main/default/objects/ETPL_HomePage__mdt/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Controls the Text that is displayed under the Header within the image.</description>
    <inlineHelpText>Controls the Text that is displayed under the Header within the image.</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>