force-app/main/default/objects/ETPL_HomePage__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Controls the text displayed in the Header within the image.</description>
    <inlineHelpText>Controls the text displayed in the Header within the image.</inlineHelpText>
    <label>Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>