force-app/main/default/objects/ETPL_HomePage__mdt/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Controls the URL to where the image is stored in Documents</description>
    <inlineHelpText>Controls the URL to where the image is stored in Documents</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>