force-app/main/default/objects/ETPL_HomePage__mdt/fields/Open_in_New_Tab__c.field-meta.xml
<CustomField>
    <fullName>Open_in_New_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether or not a new Tab should be opened when the Tile is clicked. Recommended for external websites.</description>
    <inlineHelpText>Controls whether or not a new Tab should be opened when the Tile is clicked. Recommended for external websites.</inlineHelpText>
    <label>Open in New Tab</label>
    <type>Checkbox</type>
</CustomField>