force-app/main/default/objects/ETPL_HomePage__mdt/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <description>Controls the URL the Participant is redirected to when the Tile is clicked. This will redirect the Participant to another Tab in the Community or an external website.</description>
    <inlineHelpText>Controls the URL the Participant is redirected to when the Tile is clicked. This will redirect the Participant to another Tab in the Community or an external website.</inlineHelpText>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>