force-app/main/default/objects/ETPL_HomePage__mdt/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <description>Controls the Row that the Tile should be displayed in.</description>
    <inlineHelpText>Controls the Row that the Tile should be displayed in.</inlineHelpText>
    <label>Row #</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>